--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,8 @@
         </activity>
 
         <receiver android:name=".Alarm_Receiver" />
+        <service android:name=".RingtonePlayingService"
+                android:enabled="true"></service>
     </application>
 
 </manifest>
